# HttpServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml  cmake-ubuntu.yml
HttpServer/: CMakeLists.txt  HttpServer.cpp  HttpServer.h
HttpServer/header/: Connection.h  Helper.h  HttpServer.h  HttpTypes.h  ResponseFactory.h  Router.h
HttpServer/header/Interface/: IDispatcher.h
HttpServer/header/controller/: ControllerBase.h  PokemonController.h  UserController.h  testingController.h
HttpServer/header/database/: database.h
HttpServer/header/model/: HttpTypes.h  PokemonModel.h  UserModel.h
HttpServer/header/repository/: PokemonRepo.h  UserRepo.h
HttpServer/include/: ResponseFactory.h
HttpServer/include/controller/: PokemonController.h
HttpServer/include/model/: UserModel.h
HttpServer/include/repository/: UserRepo.h
HttpServer/src/: Connection.cpp  Helper.cpp  HttpServer.cpp  ResponseFactory.cpp  Router.cpp  main.cpp
HttpServer/src/Interface/: IDispatcher.cpp
HttpServer/src/controller/: PokemonController.cpp  UserController.cpp  testingController.cpp
HttpServer/src/database/: database.cpp
HttpServer/src/repository/: PokemonRepo.cpp  UserRepo.cpp
enc_temp_folder/a18e768135f9afc555ff2cab9c103fef/: Connection.cpp
include/: AssetManager.h  Connection.h  Helper.h  HttpRequestParser.h  HttpServer.h  RateLimiter.h  ResponseFactory.h  Router.h  Server.h
include/Interface/: IDispatcher.h  IPokemonRepo.h  IRouteRegistrar.h  IUserRepo.h
include/controller/: ControllerBase.h  HomeController.h  PokemonController.h  TestingController.h  UserController.h
include/database/: database.h
include/model/: HttpTypes.h  PokemonModel.h  UserModel.h
include/repository/: PokemonRepo.h  UserRepo.h
src/: AssetManager.cpp  Connection.cpp  Helper.cpp  HttpRequestParser.cpp  HttpServer.cpp  RateLimiter.cpp  ResponseFactory.cpp  Router.cpp  Server.cpp  main.cpp
src/controller/: ControllerBase.cpp  HomeController.cpp  PokemonController.cpp  TestingController.cpp  UserController.cpp
src/database/: database.cpp
src/repository/: PokemonRepo.cpp  UserRepo.cpp
test/: CMakeLists.txt  PokemonControllerTest.cpp  UserControllerTest.cpp  main.cpp  serverTest.cpp
